[tool.poetry]
name = "ping-protocol-sphinx"
version = "0.0.1"
description = "Ping Protocol Sphinx Documentation"
authors = ["Blue Robotics"]
exclude = [".github", "docs"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
myst-parser = "^4.0.0"
sphinx = "^8.1.3"
sphinx-blue-robotics-theme = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^8.3.2"
sphinx-autobuild = "^2024.10.3"
